# hellondk

./: README.md
app/: build.gradle
app/src/androidTest/java/kr/co/everspin/hellondk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/hello/: hello.cpp
app/src/main/cpp/sum/: sum.cpp
app/src/main/java/kr/co/everspin/hellondk/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/kr/co/everspin/hellondk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
